# src/routes/resumeRoutes.js
@@ -7,11 +7,11 @@ import { evaluateResumeSchema } from "../utils/schemas.js";
 
 const router = Router();
 
-// router.get("/", authMiddleware, resumeController.getAllResumes);
-// router.get("/:id", authMiddleware, resumeController.getResume);
-// router.post("/", authMiddleware, resumeController.saveResume);
-// router.delete("/", authMiddleware, resumeController.deleteAllResumes);
-// router.delete("/:id", authMiddleware, resumeController.deleteResume);
+router.get("/", authMiddleware, resumeController.getAllResumes);
+router.get("/:id", authMiddleware, resumeController.getResume);
+router.post("/", uploadMiddleware, authMiddleware, resumeController.saveResume);
+router.delete("/", authMiddleware, resumeController.deleteAllResumes);
+router.delete("/:id", authMiddleware, resumeController.deleteResume);
 // router.post("/evaluate", authMiddleware, resumeController.evaluateAllResume);
 router.post("/evaluateResume", uploadMiddleware, validateRequest(evaluateResumeSchema), resumeController.evaluateResume);
 
